try to fix bugs in the css that won't allow button spacing and add a clear button feature

--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,8 @@ black - #000000;
 
 html {
   font-family: 'Quicksand', sans-serif;
-  min-height: 100%
+  /* min-height: 100% */
+height: 100vh;
 }
 body {
   background: rgb(247,228,191);
@@ -58,6 +59,7 @@ h2 {
   display: flex;
   justify-content: center;
   flex-direction: column;
+  align-content: flex-start;
 }
 
 .div2 {
@@ -72,15 +74,24 @@ h2 {
   justify-content: center;
 
 }
-/* .div3 {
-  margin: 25px;
-  padding: 40px;
-  justify-content: center;
-} */
+.div3 {
+  display: flex;
+  align-content: flex-start;
+  justify-content: space-around;
 
+}
+  .submit {
+  color: white;
+  background-color: #134d71;
+  padding: 5px 5px;
+  border-radius: 5px;
+  border: 0;
+  font-size: 14px;
+  position: center;
+  width: 40%;
+}
 
-
- button {
+  .clear {
   color: white;
   background-color: #134d71;
   padding: 5px 5px;
@@ -89,11 +100,10 @@ h2 {
   font-size: 14px;
   position: center;
   width: auto;
-
 }
 
- button:hover,
- button:focus {
+  button:hover,
+  button:focus {
   color: #999;
 }
 
